tests/NormalTests/paczka1/fuzzy1/92248482.err
Error in line 31: MScUqssKI S416 -2,5
Error in line 29: aGX020nWRHi S416 13,7
